force-app/main/default/objects/Fellowship_Applications_Form__c/Fellowship_Applications_Form__c.object-meta.xml
<CustomObject>
    <label>Fellowship Application (Form)</label>
    <nameField>
        <displayFormat>FAF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fellowship Applications Form</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>