force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/related/CombinedAttachments/view&quot;,&quot;Click to view Attachments&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachments</label>
    <type>Text</type>
</CustomField>