force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Completed_training_board_certification__c.field-meta.xml
<CustomField>
    <fullName>Completed_training_board_certification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I completed my neurology training/board certification within the last 3 years.</inlineHelpText>
    <label>I completed training/board certification</label>
    <type>Checkbox</type>
</CustomField>