force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Contacted_the_department__c.field-meta.xml
<CustomField>
    <fullName>Contacted_the_department__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attachment of the acceptance form</inlineHelpText>
    <label>I contacted the following department</label>
    <type>Checkbox</type>
</CustomField>