force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Fellowship__c.field-meta.xml
<CustomField>
    <fullName>Fellowship__c</fullName>
    <label>Fellowship</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Research Fellowship Application Form</value>
        </filterItems>
        <filterItems>
            <field>Fellowship__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Research Fellowship</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Clinical Fellowship Application Form</value>
        </filterItems>
        <filterItems>
            <field>Fellowship__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Clinical Fellowship</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fellowship__c</referenceTo>
    <relationshipLabel>Fellowship_Applications_Form</relationshipLabel>
    <relationshipName>Clinical_Fellowship_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>