force-app/main/default/objects/Fellowship_Applications_Form__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <label>First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>