force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hospital</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fellowship Applications Form</relationshipLabel>
    <relationshipName>Fellowship_Applications_Form</relationshipName>
    <type>Lookup</type>
</CustomField>