force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Hospital_City__c.field-meta.xml
<CustomField>
    <fullName>Hospital_City__c</fullName>
    <label>Hospital City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>