force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Hospital_Country__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Country__c</fullName>
    <label>Hospital Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>