force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Hospital_Email__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Email__c</fullName>
    <label>Hospital E-mail</label>
    <type>Email</type>
</CustomField>