force-app/main/default/objects/Fellowship_Applications_Form__c/fields/I_am_an_RRFS_member__c.field-meta.xml
<CustomField>
    <fullName>I_am_an_RRFS_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I am an RRFS member</label>
    <type>Checkbox</type>
</CustomField>