force-app/main/default/objects/Fellowship_Applications_Form__c/fields/IMPORTANT__c.field-meta.xml
<CustomField>
    <fullName>IMPORTANT__c</fullName>
    <defaultValue>&quot;The application form must be accompanied by:&quot;+ BR() +BR()+
&quot;• Letter of Acceptance from the approved host department&quot;+
&quot;• A structured CV, including a list of publications in peer review journals (including doi-links)&quot;+ BR() +&quot;• Evidence of training/experience; EAN membership certificate&quot;+BR()+&quot;• 2 letters of recommendation (in addition to the host acceptance letter)&quot;+BR()+&quot;• Copy of passport/Identification card&quot;</defaultValue>
    <label>IMPORTANT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>