force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <inlineHelpText>Why and how the clinical fellowship in that particular Host Department is relevant, objectives and expected gains</inlineHelpText>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>