force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <label>Mentor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>