force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Mentor_during_fellowship__c.field-meta.xml
<CustomField>
    <fullName>Mentor_during_fellowship__c</fullName>
    <label>Mentor during fellowship</label>
    <length>60</length>
    <type>Text</type>
</CustomField>