force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Name_of_Department__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Department__c</fullName>
    <label>Name of Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>