force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Name_of_Head_of_Department__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Head_of_Department__c</fullName>
    <label>Name of Head of Department</label>
    <length>60</length>
    <type>Text</type>
</CustomField>