force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Neurology_resident__c.field-meta.xml
<CustomField>
    <fullName>Neurology_resident__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I am neurology resident with at least 2 years of training</inlineHelpText>
    <label>I am neurology resident</label>
    <type>Checkbox</type>
</CustomField>