force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Objectives_and_expected_gains__c.field-meta.xml
<CustomField>
    <fullName>Objectives_and_expected_gains__c</fullName>
    <inlineHelpText>Please specify why and how the clinical fellowship in that particular Host Department is relevant, objectives and expected gains</inlineHelpText>
    <label>Objectives and expected gains</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>