force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Other_Department__c.field-meta.xml
<CustomField>
    <fullName>Other_Department__c</fullName>
    <inlineHelpText>If you cannot find the department above, please enter the hospital and department, including address, in English below</inlineHelpText>
    <label>Other Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>