force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Street_No__c.field-meta.xml
<CustomField>
    <fullName>Street_No__c</fullName>
    <label>Street, No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>