force-app/main/default/objects/Fellowship_Applications_Form__c/fields/Zip_code_post_code__c.field-meta.xml
<CustomField>
    <fullName>Zip_code_post_code__c</fullName>
    <label>Zip code (post code)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>