force-app/main/default/objects/Fellowship_Applications_Form__c/recordTypes/Clinical_Fellowship_Application_Form.recordType-meta.xml
<RecordType>
    <fullName>Clinical_Fellowship_Application_Form</fullName>
    <active>true</active>
    <label>Clinical Fellowship Application Form</label>
</RecordType>