force-app/main/default/objects/Fellowship_Applications_Form__c/recordTypes/Research_Fellowship_Application_Form.recordType-meta.xml
<RecordType>
    <fullName>Research_Fellowship_Application_Form</fullName>
    <active>true</active>
    <label>Research Fellowship Application Form</label>
</RecordType>